src/client/src/tests/snapshots/liquid_cache_client__tests__tpch_q17.snap
---
source: src/client/src/tests/mod.rs
expression: displayable.tree_render().to_string()
---
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│        avg_yearly:        │
│     CAST(sum(lineitem     │
│      .l_extendedprice     │
│     ) AS Float64) / 7     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│        sum(lineitem       │
│        .l_extendedp       │
│           rice)           │
│                           │
│        mode: Final        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│   CoalescePartitionsExec  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│        sum(lineitem       │
│        .l_extendedp       │
│           rice)           │
│                           │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │
│    --------------------   │
│     target_batch_size:    │
│           16384           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│        HashJoinExec       │
│    --------------------   │
│          filter:          │
│     CAST(l_quantity AS    │
│       Decimal128(30,      │
│    15)) < Float64(0.2) *  ├───────────────────────────────────────────┐
│  avg(lineitem.l_quantity) │                                           │
│                           │                                           │
│            on:            │                                           │
│  (p_partkey = l_partkey)  │                                           │
└─────────────┬─────────────┘                                           │
┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
│       ProjectionExec      │                             │       ProjectionExec      │
│    --------------------   │                             │    --------------------   │
│      l_extendedprice:     │                             │     Float64(0.2) * avg    │
│      l_extendedprice      │                             │         (lineitem         │
│                           │                             │       .l_quantity):       │
│        l_quantity:        │                             │    CAST(0.2 * CAST(avg    │
│         l_quantity        │                             │         (lineitem         │
│                           │                             │      .l_quantity) AS      │
│    p_partkey: p_partkey   │                             │   Float64) AS Decimal128  │
│                           │                             │         (30, 15))         │
│                           │                             │                           │
│                           │                             │    l_partkey: l_partkey   │
└─────────────┬─────────────┘                             └─────────────┬─────────────┘
┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │                             │       AggregateExec       │
│    --------------------   │                             │    --------------------   │
│     target_batch_size:    │                             │           aggr:           │
│           16384           │                             │  avg(lineitem.l_quantity) │
│                           │                             │                           │
│                           │                             │    group_by: l_partkey    │
│                           │                             │                           │
│                           │                             │           mode:           │
│                           │                             │      FinalPartitioned     │
└─────────────┬─────────────┘                             └─────────────┬─────────────┘
┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
│        HashJoinExec       │                             │    CoalesceBatchesExec    │
│    --------------------   │                             │    --------------------   │
│            on:            ├──────────────┐              │     target_batch_size:    │
│  (p_partkey = l_partkey)  │              │              │           16384           │
└─────────────┬─────────────┘              │              └─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│   LiquidCacheClientExec   ││   LiquidCacheClientExec   ││      RepartitionExec      │
│    --------------------   ││    --------------------   ││    --------------------   │
│          server:          ││          server:          ││ partition_count(in->out): │
│  http://localhost:50051,  ││  http://localhost:50051,  ││           1 -> 8          │
│      object_stores=[]     ││      object_stores=[]     ││                           │
│                           ││                           ││    partitioning_scheme:   │
│                           ││                           ││   Hash([l_partkey@0], 8)  │
└─────────────┬─────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       DataSourceExec      ││       DataSourceExec      ││       AggregateExec       │
│    --------------------   ││    --------------------   ││    --------------------   │
│          files: 1         ││          files: 1         ││           aggr:           │
│      format: parquet      ││      format: parquet      ││  avg(lineitem.l_quantity) │
│                           ││                           ││                           │
│         predicate:        ││         predicate:        ││    group_by: l_partkey    │
│   p_brand = Brand#23 AND  ││  DynamicFilter [ empty ]  ││       mode: Partial       │
│    p_container = MED BOX  ││                           ││                           │
└───────────────────────────┘└───────────────────────────┘└─────────────┬─────────────┘
                                                          ┌─────────────┴─────────────┐
                                                          │   LiquidCacheClientExec   │
                                                          │    --------------------   │
                                                          │          server:          │
                                                          │  http://localhost:50051,  │
                                                          │      object_stores=[]     │
                                                          └─────────────┬─────────────┘
                                                          ┌─────────────┴─────────────┐
                                                          │       DataSourceExec      │
                                                          │    --------------------   │
                                                          │          files: 1         │
                                                          │      format: parquet      │
                                                          │                           │
                                                          │         predicate:        │
                                                          │  DynamicFilter [ empty ]  │
                                                          └───────────────────────────┘
